@@ -1,3 +1,13 @@
+Tue Feb  4 19:10:29 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* string.c: use long allocator names instead of numbered
+	  allocator names.
+	  * rb_str_new2 -> rb_str_new_cstr
+	  * rb_str_new4 -> rb_str_new_frozen
+	  * rb_str_new5 -> rb_str_new_with_class
+	  * str_new3 -> str_new_shared
+	  * str_new4 -> str_new_frozen_with_klass
+
 Tue Feb  4 17:20:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (glob_helper): return the filename with actual cases on
